--- a/dillo/templates/dillo/event_list.pug
+++ b/dillo/templates/dillo/event_list.pug
@@ -47,7 +47,8 @@
 | {% endfor %}
 
 | {% else %}
-p No events for now.
+.post-list-empty
+	p No events for now.
 | {% endif %}
 
 | {% endblock stream %}
