--- a/dillo/templates/dillo/account_edit_base.pug
+++ b/dillo/templates/dillo/account_edit_base.pug
@@ -10,37 +10,41 @@
 					href="{% url 'profile_edit' %}",
 					class="{% if request.path == '/accounts/profile/'%}active{% endif %}",
 				)
-					i.i-user
-					span Profile
+					span
+						i.i-user
+						| Profile
 
 				a.btn(
 					href="{% url 'account_change_password' %}",
 					class="{% if request.path == '/accounts/password/change/'%}active{% endif %}",
 				)
-					i.i-shield
-					span Change Password
+					span
+						i.i-shield
+						| Change Password
 
 				a.btn(
 					href="{% url 'account_email' %}",
 					class="{% if request.path == '/accounts/email/'%}active{% endif %}",
 				)
-					i.i-mail
-					span Email
+					span
+						i.i-mail
+						| Email
 
 				a.btn(
 					href="{% url 'account-email-notifications' %}",
 					class="{% if request.path == '/accounts/notifications'%}active{% endif %}",
 				)
-					i.i-bell
-					span Notifications
+					span
+						i.i-bell
+						| Notifications
 
 				a.btn(
 					href="{% url 'account_settings' %}",
 					class="{% if request.path == '/accounts/settings/'%}active{% endif %}",
-
 				)
-					i.i-settings
-					span Settings
+					span
+						i.i-settings
+						| Settings
 
 		.col-9
 			#nav-tabContent.tab-content
