DS: Fix buttons

--- a/dillo/templates/dillo/design_system.pug
+++ b/dillo/templates/dillo/design_system.pug
@@ -18,30 +18,47 @@
   .row
     .col-md-8
       h2 Regular
-      .btn Button
-      .btn.btn-link Link
-      .btn.btn-primary Primary
-      .btn.btn-secondary Secondary
-      .btn.btn-danger Danger
-      .btn.btn-success Success
-      .btn.btn-warning Warning
+      .btn
+        span Button
+      .btn.btn-link
+        span Link
+      .btn.btn-primary
+        span Primary
+      .btn.btn-secondary
+        span Secondary
+      .btn.btn-danger
+        span Danger
+      .btn.btn-success
+        span Success
+      .btn.btn-warning
+        span Warning
 
       hr
 
       h2 Buttons Row
       .btn-toolbar-row
-        a(href="#").btn Button
-        a(href="#").btn.btn-link Link
-        a(href="#").btn.btn-primary Primary
-        a(href="#").btn.btn-secondary Secondary
-        a(href="#").btn.btn-danger Danger
-        a(href="#").btn.btn-success Success
-        a(href="#").btn.btn-warning Warning
+        a(href="#").btn
+          span Button
+        a(href="#").btn.btn-link
+          span Link
+        a(href="#").btn.btn-primary
+          span Primary
+        a(href="#").btn.btn-secondary
+          span Secondary
+        a(href="#").btn.btn-danger
+          span Danger
+        a(href="#").btn.btn-success
+          span Success
+        a(href="#").btn.btn-warning
+          span Warning
 
         .btn-group
-          .btn A
-          .btn B
-          .btn C
+          .btn
+            span A
+          .btn
+            span B
+          .btn
+            span C
 
       hr
 
@@ -49,32 +66,47 @@
       .row
         .col-4
           .btn-toolbar-col
-            a(href="#").btn Button
-            a(href="#").btn.btn-link Link
-            a(href="#").btn.btn-primary Primary
-            a(href="#").btn.btn-secondary Secondary
+            a(href="#").btn
+              span Button
+            a(href="#").btn.btn-link
+              span Link
+            a(href="#").btn.btn-primary
+              span Primary
+            a(href="#").btn.btn-secondary
+              span Secondary
         .col-4
           .btn-toolbar-col
-            a(href="#").btn.btn-danger Danger
-            a(href="#").btn.btn-success Success
-            a(href="#").btn.btn-warning Warning
+            a(href="#").btn.btn-danger
+              span Danger
+            a(href="#").btn.btn-success
+              span Success
+            a(href="#").btn.btn-warning
+              span Warning
 
     .col-md-4
       h2 Small
-      a(href="#").btn.btn-sm Button
-      a(href="#").btn.btn-sm.btn-primary Primary
+      a(href="#").btn.btn-sm
+        span Button
+      a(href="#").btn.btn-sm.btn-primary
+        span Primary
 
       hr
 
       h2 Buttons Group
       .btn-group
-        a(href="#").btn Button
-        a(href="#").btn.btn-link Link
-        a(href="#").btn.btn-primary Primary
-        a(href="#").btn.btn-secondary Secondary
-        a(href="#").btn.btn-danger Danger
-        a(href="#").btn.btn-success Success
-        a(href="#").btn.btn-warning Warning
-
+        a(href="#").btn
+          span Button
+        a(href="#").btn.btn-link
+          span Link
+        a(href="#").btn.btn-primary
+          span Primary
+        a(href="#").btn.btn-secondary
+          span Secondary
+        a(href="#").btn.btn-danger
+          span Danger
+        a(href="#").btn.btn-success
+          span Success
+        a(href="#").btn.btn-warning
+          span Warning
 
 | {% endblock body %}
