--- a/dillo/templates/dillo/design_system.pug
+++ b/dillo/templates/dillo/design_system.pug
@@ -1,41 +1,104 @@
 | {% extends "dillo/base.pug" %}
 
-| {% block body %}
+| {% block content %}
 .container
-  h1 Headings
+  .row
+    .col-sm-2(style="text-align: right")
+      h1 Type
 
-  h1 Heading H1
-  h2 Heading H2
-  h3 Heading H3
-  h4 Heading H4
-  h5 Heading H5
-  h6 Heading H6
+    .col-sm-10
+      .row
+        .col-sm-4
+          h1 Headings
+
+          h1 Heading H1
+          h2 Heading H2
+          h3 Heading H3
+          h4 Heading H4
+          h5 Heading H5
+          h6 Heading H6
+
+        .col-sm-4
+          p Regular paragraph, and #[a(href="#") a link].
+
+          p.
+            Another #[strong paragraph] this time #[i slightly longer],
+            to see how it wraps around. Comes in handy to check the
+            #[code line-height] CSS property.
+            Is it supercalifragilisticexpialidocious
+            or #[strong megasupercalifragilisticexpialidocious]?
+            #[abbr(title="Anyway") Either way] helps for #[code white-space] stuff.
+
+        .col-sm-4
+          blockquote
+            p This is a #[code blockquote]. Who knows how is this going to render.
+            small Author: Unknown
 
   hr
 
-  h1 Buttons
-
   .row
-    .col-md-8
-      h2 Regular
-      .btn
-        span Button
-      .btn.btn-link
-        span Link
-      .btn.btn-primary
-        span Primary
-      .btn.btn-secondary
-        span Secondary
-      .btn.btn-danger
-        span Danger
-      .btn.btn-success
-        span Success
-      .btn.btn-warning
-        span Warning
+    .col-sm-2(style="text-align: right")
+      h1 Buttons
+
+    .col-sm-10
+      div
+        button
+          span Button Element
+        .btn
+          span Text Button
+        .btn
+          i.i-check
+        .btn.active
+          i.i-check
+        .btn
+          i.i-check
+          span Span + Icon Outside
+        .btn
+          span
+            i.i-check
+            | Span + Icon Inside
+
+      p
+        .btn-group
+          .btn
+            span Button
+          .btn
+            i.i-check
+          .btn.active
+            i.i-check
+            span With Span + Active
+          .btn
+            span
+              i.i-check
+              | With Span
+
+        .btn-group
+          .btn
+            span Group
+          .btn.active
+            span of
+          .btn
+            span Icons
+
+      p
+        .btn.btn-link
+          span Link
+        .btn.btn-primary
+          span Primary
+        .btn.btn-secondary
+          span Secondary
+        .btn.btn-danger
+          span Danger
+        .btn.btn-success
+          span Success
+        .btn.btn-warning
+          span Warning
 
       hr
 
       h2 Buttons Row
+      p
+        | Wrapped in #[code btn-toolbar-row]
       .btn-toolbar-row
         a(href="#").btn
           span Button
@@ -45,50 +108,65 @@
           span Primary
         a(href="#").btn.btn-secondary
           span Secondary
-        a(href="#").btn.btn-danger
-          span Danger
-        a(href="#").btn.btn-success
-          span Success
-        a(href="#").btn.btn-warning
-          span Warning
 
         .btn-group
           .btn
-            span A
+            span Group
+          .btn.active
+            span of
           .btn
-            span B
-          .btn
-            span C
+            span Icons
 
       hr
 
       h2 Buttons Column
+      p
+        | Wrapped in #[code btn-toolbar-col]
       .row
+        .col-4
+          .btn-toolbar-col
+            a.btn.active(href="#")
+              span
+                i.i-user
+                | Profile
+
+            a.btn(href="#")
+              span
+                i.i-shield
+                | Change Password
+
+            a.btn(href="#")
+              span
+                i.i-mail
+                | Email
+
+            a.btn(href="#")
+              span
+                i.i-bell
+                | Notifications
+
         .col-4
           .btn-toolbar-col
             a(href="#").btn
               span Button
             a(href="#").btn.btn-link
-              span Link
+              i.i-check
+              span Link: i Outside Span
             a(href="#").btn.btn-primary
-              span Primary
+              span
+                i.i-check
+                | Primary: i Inside Span
             a(href="#").btn.btn-secondary
               span Secondary
+
         .col-4
           .btn-toolbar-col
-            a(href="#").btn.btn-danger
-              span Danger
-            a(href="#").btn.btn-success
-              span Success
-            a(href="#").btn.btn-warning
-              span Warning
-
-    .col-md-4
-      h2 Small
-      a(href="#").btn.btn-sm
-        span Button
-      a(href="#").btn.btn-sm.btn-primary
-        span Primary
+            a(href="#").btn.btn-sm
+              span Small
+            a(href="#").btn.btn-sm
+              span Small Primary
+            a(href="#").btn.btn-sm
+              span Small Secondary
 
       hr
 
@@ -102,11 +180,21 @@
           span Primary
         a(href="#").btn.btn-secondary
           span Secondary
-        a(href="#").btn.btn-danger
-          span Danger
-        a(href="#").btn.btn-success
-          span Success
-        a(href="#").btn.btn-warning
-          span Warning
 
-| {% endblock body %}
+      hr
+
+      h2 Small
+      a(href="#").btn.btn-sm
+        span Button
+      a(href="#").btn.btn-sm.btn-primary
+        span Primary
+
+| {% endblock content %}
+
+| {% block javascript_extra %}
+script.
+  $('.btn').on('click', function(e){
+    e.preventDefault();
+    $(this).toggleClass('active');
+  });
+| {% endblock javascript_extra %}
