BS: Tweak buttons

--- a/dillo/templates/dillo/components/_button_edit.pug
+++ b/dillo/templates/dillo/components/_button_edit.pug
@@ -1,3 +1,4 @@
-a.btn.btn-link-bg.with-icon(href="{{ url }}", class="{{ class }}", title="{{ label }}")
-	i.i-edit
-	strong {{ label }}
+a.btn.btn-block(href="{{ url }}", class="{{ class }}", title="{{ label }}")
+  span
+    i.i-edit
+    strong {{ label }}
