--- a/dillo/templates/dillo/posts_base.pug
+++ b/dillo/templates/dillo/posts_base.pug
@@ -59,12 +59,10 @@ ul#posts-list.post-list(
 				class="{% if layout == 'grid' %}is-active{% endif %}")
 				i.i-grid
 
-		a.btn-create(
-			href="{% url 'post_create' %}",
-			title='{% trans "Create a Post" %}')
-			span
-				i.i-edit
-				| {% trans "Create Post" %}
+
+		| {% url 'post_create' as btn_create_url %}
+		| {% trans 'Create a Post' as btn_label %}
+		| {% include 'dillo/components/_button_generic.pug' with url=btn_create_url label=btn_label class="btn-primary" icon="i-edit" %}
 | {% endblock navbar_upload_btn%}
 
 | {% if request.user.is_authenticated %}
