--- a/dillo/templates/dillo/components/_nav_dropdown_admin.pug
+++ b/dillo/templates/dillo/components/_nav_dropdown_admin.pug
@@ -1,17 +1,21 @@
 | {% load i18n %}
 | {% if request.user.is_superuser %}
 a.dropdown-item(href="{% url 'admin:index' %}", title='Whoosh')
-	i.i-coffee
-	| Whoosh
+  i.i-coffee
+  | Whoosh
 a.dropdown-item(href="{% url 'admin:auth_user_changelist' %}", title='Users List')
-	i.i-users
-	| Users
+  i.i-users
+  | Users
+//- XXX Replace with proper url lookup like 'admin:rigs' or so.
+a.dropdown-item(href="/admin/rigs/rig/", title='Rigs List')
+  i.i-package
+  | Rigs
 .dropdown-divider
 | {% endif %}
 a.dropdown-item(href="{% url 'profile_edit' %}", title='{% trans "Settings" %}')
-	i.i-settings
-	| {% trans "Settings" %}
+  i.i-settings
+  | {% trans "Settings" %}
 .dropdown-divider
 a.dropdown-item(href="{% url 'logout' %}", title='{% trans "Logout" %}')
-	i.i-log-out
-	| {% trans "Logout" %}
+  i.i-log-out
+  | {% trans "Logout" %}
