--- a/dillo/templates/dillo/theater/short_detail.pug
+++ b/dillo/templates/dillo/theater/short_detail.pug
@@ -34,32 +34,36 @@
 		| {% trans 'Posted' %} #[span(title="{{ short.created_at }}") {{ short.created_at | timesince | shorten_timesince }}] {% trans 'ago by' %}
 		#[a.text-muted(href="{% url 'profile_details' short.user.username %}", title="{{ short.user.username }}") {{ short.user }}]
 
-	.btn-toolbar-row.mt-3
+	hr
+
+	.btn-toolbar-row
 		button.btn.btn-link-bg.btn-sidebar(
 			data-like_toggle_url="{% url 'like_toggle' content_type_id=short.content_type_id object_id=short.id %}",
 			class="js-like-toggle{% if short|is_liked:request.user %} is-liked{% endif %}",
 			title="{% if short|is_liked:request.user %}{% trans 'Unlike' %}{% else %}{% trans 'Like' %}{% endif %}")
-			i.i-heart
-			strong {% if short|is_liked:request.user %}{% trans 'Liked' %}{% else %}{% trans 'Like' %}{% endif %}
+			span
+				i.i-heart
+				span {% if short|is_liked:request.user %}{% trans 'Liked' %}{% else %}{% trans 'Like' %}{% endif %}
 
 		| {% include 'dillo/components/_button_share.pug' with shared_object_label='short' %}
 
 	hr
 
-	a.btn.btn-primary.btn-sidebar(href="{% url 'short-create' %}")
-		strong {% trans 'Submit Short' %}
+	| {% url 'short-create' as btn_create_url %}
+	| {% trans 'Submit Short' as btn_modal_label %}
+	| {% include 'dillo/components/_button_generic.pug' with url=btn_create_url label=btn_modal_label class='btn-primary' %}
 
 	| {% if short.user == request.user %}
 	hr
-	| {% url 'short-update' short.pk as edit_url %}
-	| {% trans 'Edit Short' as edit_label %}
-	| {% include 'dillo/components/_button_edit.pug' with url=edit_url label=edit_label %}
+	| {% url 'short-update' short.pk as btn_edit_url %}
+	| {% trans 'Edit Short' as btn_edit_label %}
+	| {% include 'dillo/components/_button_generic.pug' with url=btn_edit_url label=btn_edit_label icon='i-edit' %}
 	| {% endif %}
 
 	| {% if request.user.is_superuser %}
 	hr
-	| {% url 'admin:dillo_short_change' short.pk as edit_url %}
-	| {% include 'dillo/components/_button_edit.pug' with url=edit_url label="Whoosh Short" %}
+	| {% url 'admin:dillo_short_change' short.pk as btn_edit_url %}
+	| {% include 'dillo/components/_button_generic.pug' with url=btn_edit_url label="Whoosh Short" icon='i-edit' %}
 	| {% endif %}
 
 | {% endblock sidebar %}
