--- a/dillo/templates/dillo/theater/reel_list.pug
+++ b/dillo/templates/dillo/theater/reel_list.pug
@@ -18,8 +18,10 @@
 				| {% endblocktrans %}
 
 			.col-md-3
-				a.btn.btn-primary.btn-block(href="{% url 'profile_edit' %}")
-					span {% trans 'Add Reel to Profile' %}
+				| {% url 'profile_edit' as btn_profile_url %}
+				| {% trans 'Add Reel to Profile' as btn_profile_label %}
+				| {% include 'dillo/components/_button_generic.pug' with url=btn_profile_url label=btn_profile_label class="btn-primary" %}
+
 | {% endif %}
 | {% endif %}
 
