--- a/dillo/templates/dillo/components/_comment_view.pug
+++ b/dillo/templates/dillo/components/_comment_view.pug
@@ -19,8 +19,8 @@
 
 		.comment-content {{ comment.content | linkify_tags_and_mentions | urlizetrunc:20 | linebreaksbr }}
 
-		.comment-actions.btn-toolbar-row.btn-sm
-			nav.navbar.navbar-expand.px-0.mr-auto
+		.comment-actions
+			.btn-toolbar-row.btn-sm
 				| {% if request.user.is_authenticated %}
 				.btn.btn-link.btn-like(
 					id="likes-count-{{ comment.content_type_id }}-{{ comment.id }}",
@@ -28,10 +28,11 @@
 					data-like_toggle_url="{% url 'like_toggle' content_type_id=comment.content_type_id object_id=comment.id %}",
 					class="js-like-toggle {% if comment|is_liked:request.user %}is-liked{% endif %}",
 					title="{% trans 'Like comment' %}")
-					i.i-heart
-					| {% if comment.likes.count > 0 %}
-					span.js-likes-count {{ comment.likes.count }}
-					| {% endif %}
+					span
+						i.i-heart
+						| {% if comment.likes.count > 0 %}
+						span.js-likes-count {{ comment.likes.count }}
+						| {% endif %}
 
 				//- Reply button. If comment.parent_comment then it's a reply.
 				.btn.btn-link(
@@ -40,27 +41,28 @@
 					data-parent_comment_id="{{ comment.parent_comment.id }}",
 					data-toggle="tooltip",
 					title="{% trans 'Reply to this comment' %}")
-					| {% trans "Reply" %}
+					span {% trans "Reply" %}
 				| {% else %}
 				//- Dummy buttons, redirect to login.
 				a.btn.btn-link.btn-like(
 					data-toggle="tooltip",
 					href="{% url 'account_login' %}",
 					title="{% trans 'Like comment' %}")
-					i.i-heart
-					| {% if comment.likes.count > 0 %}
-					span {{ comment.likes.count }}
-					| {% endif %}
+					span
+						i.i-heart
+						| {% if comment.likes.count > 0 %}
+						span {{ comment.likes.count }}
+						| {% endif %}
 
 				a.btn.btn-link(
 					data-toggle="tooltip",
 					href="{% url 'account_login' %}",
 					title="{% trans 'Reply to this comment' %}")
-					| {% trans "Reply" %}
+					span {% trans "Reply" %}
 				| {% endif %}
 
-			| {% if request.user.is_authenticated %}
-			nav.navbar.navbar-expand.px-0.ml-auto
+				| {% if request.user.is_authenticated %}
+
 				ul.navbar-nav
 					li.nav-item.dropdown
 						a#dropdown-comment.btn.btn-link(
@@ -68,12 +70,13 @@
 							data-toggle='dropdown',
 							aria-haspopup='true',
 							aria-expanded='false')
-							i.i-more-vertical
+							span
+								i.i-more-vertical
 
 						.dropdown-menu.dropdown-menu-right(aria-labelledby='dropdown-comment')
 							//- If user is comment author, allow deletion.
 							| {% if user == comment.user %}
-							a.dropdown-item(
+							a.dropdown-item.danger(
 								href="#",
 								class="js-delete-comment",
 								data-comment_id="comment-{{ comment.id }}",
@@ -94,4 +97,4 @@
 								i.i-flag
 								| {% trans "Report" %}...
 							| {% endif %}
-			| {% endif %}
+				| {% endif %}
