Posts Stream: Cleanup

--- a/dillo/templates/dillo/posts_base.pug
+++ b/dillo/templates/dillo/posts_base.pug
@@ -154,4 +154,4 @@ script.
 //- This page has infinite scroll, footer is shoveled in the sidebar.
 | {% block site_footer %}{% endblock site_footer %}
 
-| {% block body_classes %}post-stream{% endblock body_classes %}
+| {% block body_classes %}is-post-stream{% endblock body_classes %}
