--- a/dillo/templates/dillo/post_detail.pug
+++ b/dillo/templates/dillo/post_detail.pug
@@ -24,3 +24,5 @@ meta(property="og:video:width", content="1280")
 meta(property="og:video:height", content="720")
 | {% endif %}
 | {% endblock head_extra %}
+
+| {% block body_classes %}is-post-detail{% endblock %}
