Cleanup: fixes and minor tweaks

--- a/dillo/templates/dillo/components/_button_load_more.pug
+++ b/dillo/templates/dillo/components/_button_load_more.pug
@@ -1,7 +1,7 @@
 | {% load i18n %}
 
-button.btn.btn-link.btn-sidebar.px-4(
+button.btn.btn-link.btn-sidebar(
 	class="{{ js_class }}",
 	title="{% trans 'Load More' %}",
 	data-next_url="{{ url_next }}?page={{ page_obj.next_page_number }}")
-	strong {% trans 'Load More' %}
+	span {% trans 'Load More' %}
