--- a/dillo/templates/dillo/components/_post_header.pug
+++ b/dillo/templates/dillo/components/_post_header.pug
@@ -35,7 +35,8 @@
 						data-toggle='dropdown',
 						aria-haspopup='true',
 						aria-expanded='false')
-						i.i-more-vertical
+						span
+							i.i-more-vertical
 
 					.dropdown-menu.dropdown-menu-right(aria-labelledby='dropdown-post-{{ post.id }}')
 						a.dropdown-item(
