--- a/dillo/templates/dillo/profile_details.pug
+++ b/dillo/templates/dillo/profile_details.pug
@@ -8,8 +8,6 @@
 | {% include 'dillo/components/_profile_page_title.pug' with user=user %}
 | {% endblock page_title %}
 
-| {% block base_classes %}swap-direction{% endblock %}
-
 | {% block stream %}
 | {% if user.profile.reel %}
 .profile-reel
@@ -35,7 +33,7 @@
 .sidebar-block
 	| {% url 'admin:auth_user_change' user.id as edit_url %}
 	| {% trans 'Whoosh User' as edit_label %}
-	| {% include 'dillo/components/_button_edit.pug' with url=edit_url label=edit_label %}
+	| {% include 'dillo/components/_button_generic.pug' with url=edit_url label=edit_label icon='i-edit' %}
 | {% endif %}
 | {% endblock sidebar %}
 
