--- a/dillo/templates/dillo/components/_modal.pug
+++ b/dillo/templates/dillo/components/_modal.pug
@@ -2,9 +2,8 @@
 	.modal-dialog.modal-dialog-centered(role='document')
 		.modal-content
 			.modal-header
-				h5#modal-title.modal-title.font-weight-bold Modal title
+				h2#modal-title.modal-title Modal title
 				button.close(type='button', data-dismiss='modal', aria-label='Close')
 					span(aria-hidden='true')
 						i.i-cancel
 			.modal-body
-				| ...
