--- a/dillo/templates/dillo/components/_navigation_main.pug
+++ b/dillo/templates/dillo/components/_navigation_main.pug
@@ -58,8 +58,9 @@ nav.nav-primary.navbar.navbar-expand
 						aria-expanded='false',
 						href="#",
 						title="{% trans 'More...' %}")
-						i.i-more-vertical
-						span {% trans 'More...' %}
+						span
+							i.i-more-vertical
+							span {% trans 'More...' %}
 					.dropdown-menu.dropdown-menu-left(aria-labelledby='dropdown-user-mobile')
 						| {% include 'dillo/components/_nav_dropdown_admin.pug' %}
 				| {% endif %}
@@ -100,14 +101,16 @@ nav.nav-primary.navbar.navbar-expand
 					data-notifications-count="{{ notifications_count }}",
 					data-toggle="tooltip",
 					class="js-notifications-toggle notifications-toggle {% if notifications_count %}has-notifications{% endif %}")
-					i.i-bell
+					span
+						i.i-bell
 				| {% endif %}
 
 				| {% if request.user.is_authenticated %}
 				.dropdown
 					a.btn.btn-link.btn-icon#dropdown-user(
 						data-toggle='dropdown', aria-haspopup='true', aria-expanded='false', href="#", title='{% trans "More..." %}')
-						i.i-more-vertical
+						span
+							i.i-more-vertical
 					.dropdown-menu.dropdown-menu-right(aria-labelledby='dropdown-user')
 						| {% include 'dillo/components/_nav_dropdown_admin.pug' %}
 				| {% endif %}
