--- a/dillo/templates/dillo/theater/short_form.pug
+++ b/dillo/templates/dillo/theater/short_form.pug
@@ -15,6 +15,7 @@
 		.card-cta
 			button.btn.btn-primary.btn-block.with-icon(
 				type="submit")
-				i.i-check
-				| {% trans 'Submit Short' %}
+				span
+					i.i-check
+					span {% trans 'Submit Short' %}
 | {% endblock content_card %}
