--- a/dillo/templates/dillo/rigs/rig_detail.pug
+++ b/dillo/templates/dillo/rigs/rig_detail.pug
@@ -59,8 +59,9 @@ h1 {{ rig.name }}
 			data-like_toggle_url="{% url 'like_toggle' content_type_id=rig.content_type_id object_id=rig.id %}",
 			class="js-like-toggle{% if rig|is_liked:request.user %} is-liked{% endif %}",
 			title="{% if rig|is_liked:request.user %}{% trans 'Unlike' %}{% else %}{% trans 'Like' %}{% endif %}")
-			i.i-heart
-			strong {% if rig|is_liked:request.user %}{% trans 'Liked' %}{% else %}{% trans 'Like' %}{% endif %}
+			span
+				i.i-heart
+				span {% if rig|is_liked:request.user %}{% trans 'Liked' %}{% else %}{% trans 'Like' %}{% endif %}
 
 		| {% include 'dillo/components/_button_share.pug' with shared_object_label='rig' %}
 
